基础结构调整

--- a/etc/game.conf
+++ b/etc/game.conf
@@ -4,17 +4,20 @@ skynetpath = "./3rd/skynet/"
 --lua加载文件名,由底层C核心调用加载
 lualoader = skynetpath.."lualib/loader.lua"
 --预加载lua文件,此文件会先于所有的lua服务启动前运行
-preload = "preload.lua"	-- run preload.lua before every lua service run
+preload = "./common/lualib/preload.lua"
 --C库文件路径
 cpath = skynetpath.."cservice/?.so;"
 --lua服务路径
-luaservice = skynetpath.."service/?.lua;"
+luaservice = skynetpath.."service/?.lua;"..
+						 "./common/service/?.lua;"..
+						 "./server/game_server/?.lua"
 --lua库路径
 lualib = skynetpath.."lualib/?.lua;"..
-					 "./server/game_server/?.lua;"
+					 "./common/lualib/?.lua"
+					 
 --C库路径
-clib = 	skynetpath.."luaclib/?.so;"..
-					"./common/luaclib/?.so;"
+clib = skynetpath.."luaclib/?.so;"..
+					"./common/luaclib/?.so"
 --lua库路径
 lua_path = lualib
 --c生成的lua库路径
@@ -26,16 +29,17 @@ snax = luaservice
 
 --#########################################日志配置##############################
 --skynet日志服务,nil则输出到stdout
-if "$BAT_GAME_DAEMON" == "1" then
+if "$GAME_DAEMON" == "1" then
 	logger = "loghook"
 	logservice = "snlua"
-	daemon = "./logs/$BAT_GAME_NODE_NAME.pid"
+	daemon = "./logs/game$GAME_SERVER_ID.pid"
 else
 	logger = nil
 	daemon = nil
 end
 --日志文件路径
 logpath = "./logs"
+eventlogpath = "./logs/eventlog"
 --###############################################################################
 
 
@@ -48,36 +52,24 @@ start = "main"	-- main script
 harbor = 0
 --集群名称文件
 cluster="./etc/clustername.lua"
---本集群节点名称
-clusternode = "$BAT_GAME_NODE_NAME"
 --线程数,一般不超过单机最大CPU数量
-thread = "$BAT_GAME_THREAD"  
---服务监听端口
-port = "$BAT_GAME_PORT"
---最多允许的客户端连接数(有效验证)
-maxclient = $BAT_GAME_MAXCLIENT
---动态表数据起始key数值
-dynamic_begin = "$BAT_GAME_DYNAMIC_BEGIN"
+thread = "$GAME_WORK_THREAD"  
+--服务器ID
+serverid = $GAME_SERVER_ID
+--集群节点名称
+clusternode="$GAME_MONITOR_NODE"
+--集群IP
+clusterip = "$GAME_CLUSTER_IP"
+--集群端口
+clusterport = "$GAME_CLUSTER_PORT"
 --WEB监听端口
-webport = "$BAT_GAME_WEB_PORT"
+webport = "$GAME_WEB_PORT"
 --DEBUG端口
-debugport = "$BAT_GAME_DEBUG_PORT"
+debugport = "$GAME_DEBUG_PORT"
 --Remote Debug
-remotedebug = "$BAT_GAME_REMOTE_DEBUG"
---动态表DC服务数量
-if "$BAT_GAME_REMOTE_DEBUG" == "1" then
-	dynamic_dc_number = 1
-else
-	dynamic_dc_number = 20
-end
---逻辑子服务数量
-if "$BAT_GAME_REMOTE_DEBUG" == "1" then
-	logic_slave_number = 1
-else
-	logic_slave_number = 20
-end
+remotedebug = "$GAME_REMOTE_DEBUG"
 --远程调试IP
-if "$BAT_GAME_REMOTE_DEBUG" == "1" then
-	remotedebugip = "$BAT_GAME_REMOTE_DEBUG_IP"
+if remotedebug == "1" then
+	remotedebugip = "$GAME_REMOTE_DEBUG_IP"
 end
 --###############################################################################
