--- a/etc/world.conf
+++ b/etc/world.conf
@@ -10,7 +10,7 @@ cpath = skynetpath.."cservice/?.so;"
 --lua服务路径
 luaservice = skynetpath.."service/?.lua;"..
 						 "./common/service/?.lua;"..
-						 "./server/center_server/?.lua"
+						 "./server/world_server/?.lua"
 --lua库路径
 lualib = skynetpath.."lualib/?.lua;"..
 					 "./common/lualib/?.lua"
@@ -29,10 +29,10 @@ snax = luaservice
 
 --#########################################日志配置##############################
 --skynet日志服务,nil则输出到stdout
-if "$CENTER_DAEMON" == "1" then
+if "$WORLD_DAEMON" == "1" then
 	logger = "loghook"
 	logservice = "snlua"
-	daemon = "./logs/center$CENTER_SERVER_ID.pid"
+	daemon = "./logs/world$WORLD_SERVER_ID.pid"
 else
 	logger = nil
 	daemon = nil
@@ -53,23 +53,27 @@ harbor = 0
 --集群名称文件
 cluster="./etc/clustername.lua"
 --线程数,一般不超过单机最大CPU数量
-thread = "$CENTER_WORK_THREAD"  
+thread = "$WORLD_WORK_THREAD"  
+--服务监听端口
+port = "$WORLD_PORT"
+--最多允许的客户端连接数(有效验证)
+maxclient = $WORLD_MAX_CLIENT
 --服务器ID
-serverid = $CENTER_SERVER_ID
---集群节点名称
-clusternode="$CENTER_CLUSTER_NODE"
+serverid = $WORLD_SERVER_ID
+--监视服务器名称
+monitornode = $WORLD_MONITOR_NODE
 --集群IP
-clusterip = "$CENTER_CLUSTER_IP"
+clusterip = "$WORLD_CLUSTER_IP"
 --集群端口
-clusterport = "$CENTER_CLUSTER_PORT"
+clusterport = "$WORLD_CLUSTER_PORT"
 --WEB监听端口
-webport = "$CENTER_WEB_PORT"
+webport = "$WORLD_WEB_PORT"
 --DEBUG端口
-debugport = "$CENTER_DEBUG_PORT"
+debugport = "$WORLD_DEBUG_PORT"
 --Remote Debug
-remotedebug = "$CENTER_REMOTE_DEBUG"
+remotedebug = "$WORLD_REMOTE_DEBUG"
 --远程调试IP
 if remotedebug == "1" then
-	remotedebugip = "$CENTER_REMOTE_DEBUG_IP"
+	remotedebugip = "$WORLD_REMOTE_DEBUG_IP"
 end
 --###############################################################################
